Mon Aug  4 01:26:46 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (env_select): fix memory leak and crash on Windows, make
	  keys array first instead of iterating on environ directly.
	  [ruby-dev:48325] [Bug #9978]

Mon Aug  4 01:24:09 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (ruby_setenv): fix memory leak on Windows, free
	  environment strings block after check for the size.
	  [ruby-dev:48323] [Bug #9977]

Mon Aug  4 01:11:07 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* re.c (match_aref, rb_reg_regsub): consider encoding of captured
	  names, encoding-incompatible should not match.
	  [ruby-dev:48278] [Bug #9903]

Mon Aug  4 00:52:42 2014  Koichi Sasada  <ko1@atdot.net>

	* vm_eval.c (rb_catch_protect): fix same problem of [Bug #9961].

	* vm_eval.c (rb_iterate): ditto.

Mon Aug  4 00:52:42 2014  Koichi Sasada  <ko1@atdot.net>

	* vm.c (rb_vm_rewind_cfp): add new function to rewind specified cfp
	  with invoking RUBY_EVENT_C_RETURN.
	  [Bug #9961]

	* vm_core.h: ditto.

	* eval.c (rb_protect): use it.

	* eval.c (rb_rescue2): ditto.

	* vm_eval.c (rb_iterate): ditto.

	* test/ruby/test_settracefunc.rb: add a test.

	* vm_core.h (rb_vm_rewind_cfp): add the prototype declaration.

Sun Aug  3 00:06:10 2014  Charlie Somerville  <charliesome@ruby-lang.org>

	* node.c (dump_node): handle nd_value == (NODE *)-1 to mean this
	  keyword argument is required

Thu Jul 31 01:56:11 2014  Koichi Sasada  <ko1@atdot.net>

	* compile.c (rb_iseq_compile_node): put start label of block after
	  trace (b_call).
	  [Bug #9964]

	* test/ruby/test_settracefunc.rb: add a test.

	  added assert_consistent_call_return() method check call/return
	  consistency.

Thu Jul 31 01:22:43 2014  Koichi Sasada  <ko1@atdot.net>

	* vm.c (invoke_block_from_c): move call/return event timing for
	  bmethod. It can invoke inconsistent call event if this call raises
	  argument error.
	  [Bug #9959]

	* vm_insnhelper.c (vm_call_bmethod_body): ditto.
